# drone-visual-positioning

./: .gitignore  ALGORITHMS.md  CLAUDE.md  README.md  pyproject.toml
deploy/: install-rpi.sh  vps-onboard.service
onboard_c/: CMakeLists.txt
onboard_c/include/: dead_reckoning.h  ekf.h  fusion.h  geo_transform.h  geofence.h  msp.h  nmea.h  tile_math.h  vps_types.h
onboard_c/src/: dead_reckoning.c  ekf.c  fusion.c  geo_transform.c  geofence.c  msp.c  nmea.c  tile_math.c
src/drone_vps.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/onboard/: adaptive.py  altitude.py  benchmark.py  camera.py  confidence.py  config.py  dead_reckoning.py  ekf.py  flight_recorder.py  fusion.py  geo_transform.py  geofence.py  health.py  homography.py  main.py  map_loader.py  matcher.py  msp.py  multi_res.py  nmea.py  preprocessing.py  rate_limiter.py  retrieval.py  status.py  telemetry.py  tile_cache.py  uart_manager.py
src/programmer/: cli.py  downloader.py  export_onnx.py  indexer.py  map_pack.py  packager.py  replay.py  simulate.py  validator.py  visualize.py
src/shared/: tile_math.py
tests/: test_adaptive.py  test_altitude.py  test_benchmark.py  test_confidence.py  test_dead_reckoning.py  test_ekf.py  test_flight_recorder.py  test_fusion.py  test_geo_transform.py  test_geofence.py  test_health.py  test_integration.py  test_map_loader.py  test_msp.py  test_nmea.py  test_pipeline.py  test_preprocessing.py  test_rate_limiter.py  test_replay.py  test_simulate.py  test_status.py  test_telemetry.py  test_tile_cache.py  test_tile_math.py  test_uart_manager.py  test_validator.py  test_visualize.py
